更新 CI/CD 配置，添加 systemd 服務文件安裝步驟，並修正環境變量文件路徑

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -115,7 +115,7 @@ jobs:
         username: ${{ secrets.DEPLOY_USER }}
         key: ${{ secrets.DEPLOY_SSH_KEY }}
         port: ${{ secrets.DEPLOY_PORT || 22 }}
-        source: "backend/tspl-simulator,frontend/build/*,backend/.env.example"
+        source: "backend/tspl-simulator,frontend/build/*,backend/.env.example,deploy/tspl-simulator.service"
         target: "/opt/tspl-simulator"
         strip_components: 0
 
@@ -141,10 +141,19 @@ jobs:
             cp backend/.env.example backend/.env
           fi
 
+          # 安裝 systemd 服務文件
+          sudo cp deploy/tspl-simulator.service /etc/systemd/system/
+
           # 啟動新服務
           sudo systemctl daemon-reload
           sudo systemctl start tspl-simulator
           sudo systemctl enable tspl-simulator
 
+          # 等待服務啟動
+          sleep 2
+
           # 檢查服務狀態
-          sudo systemctl status tspl-simulator
+          sudo systemctl status tspl-simulator --no-pager || true
+          
+          # 顯示最近日誌以便調試
+          sudo journalctl -u tspl-simulator -n 50 --no-pager
