--- a/deploy/tspl-simulator.service
+++ b/deploy/tspl-simulator.service
@@ -7,7 +7,8 @@ Type=simple
 User=ubuntu
 Group=ubuntu
 WorkingDirectory=/opt/tspl-simulator/backend
-EnvironmentFile=/opt/tspl-simulator/backend/.env
+EnvironmentFile=-/opt/tspl-simulator/backend/.env
+ExecStartPre=/bin/sh -c 'mkdir -p /opt/tspl-simulator/backend/data/API_print /opt/tspl-simulator/backend/data/MQTT_print'
 ExecStart=/opt/tspl-simulator/backend/tspl-simulator
 Restart=on-failure
 RestartSec=5s
