--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,8 +7,11 @@
     "@types/react": "^18.2.42",
     "@types/react-dom": "^18.2.17",
     "axios": "^1.6.2",
+    "i18next": "^23.7.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet-async": "^2.0.4",
+    "react-i18next": "^13.5.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5"
   },
